tests/miniJava/neg/006690_mutation.MiniJava
class java { public static void System.out.println ( String [ ] java ) { { } } }
